--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,36 @@
-example/example.xcodeproj/project.xcworkspace/xcshareddata
-example/example.xcodeproj/project.xcworkspace/xcuserdata
-example/example.xcodeproj/xcshareddata
-example/example.xcodeproj/xcuserdata
-example/.vs
-example/Win32
-example/x64/
-example/example.opensdf
-example/example.sdf
-example/example.VC.db
-example/example.VC.VC.opendb
-example/example
-example/example.exe
-*.o
+# Prerequisites
 *.d
-*.user
-tests/tests.xcodeproj/project.xcworkspace/xcshareddata
-tests/tests.xcodeproj/project.xcworkspace/xcuserdata
-tests/tests.xcodeproj/xcshareddata
-tests/tests.xcodeproj/xcuserdata
-tests/.vs
-tests/Win32
-tests/x64/
-tests/tests.opensdf
-tests/tests.sdf
-tests/tests.VC.db
-tests/tests.VC.VC.opendb
-tests/tests
-tests/tests.exe
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# Others
+build
+.vscode
