--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(example main.cpp)
-target_link_libraries(example PRIVATE minihttp)
-target_include_directories(example PRIVATE ${PROJECT_SOURCE_DIR}/include)
+add_executable(${PROJECT_NAME}_example example.cpp)
+target_link_libraries(${PROJECT_NAME}_example PRIVATE minihttp)
+target_include_directories(${PROJECT_NAME}_example PRIVATE ${PROJECT_SOURCE_DIR}/include)
