--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -14,14 +14,14 @@ if(NOT json_POPULATED)
     FetchContent_MakeAvailable(json)
 endif()
 
-add_executable(${PROJECT_NAME}_example example.cpp)
-target_link_libraries(${PROJECT_NAME}_example PRIVATE minihttp)
-target_include_directories(${PROJECT_NAME}_example PRIVATE ${PROJECT_SOURCE_DIR}/include)
+add_executable(minihttp_example example.cpp)
+target_link_libraries(minihttp_example PRIVATE minihttp)
+target_include_directories(minihttp_example PRIVATE ${PROJECT_SOURCE_DIR}/include)
 
-add_executable(${PROJECT_NAME}_get_example get_example.cpp)
-target_link_libraries(${PROJECT_NAME}_get_example PRIVATE minihttp)
-target_include_directories(${PROJECT_NAME}_get_example PRIVATE ${PROJECT_SOURCE_DIR}/include)
+add_executable(minihttp_get_example get_example.cpp)
+target_link_libraries(minihttp_get_example PRIVATE minihttp)
+target_include_directories(minihttp_get_example PRIVATE ${PROJECT_SOURCE_DIR}/include)
 
-add_executable(${PROJECT_NAME}_post_example post_example.cpp)
-target_link_libraries(${PROJECT_NAME}_post_example PRIVATE minihttp json)
-target_include_directories(${PROJECT_NAME}_post_example PRIVATE ${PROJECT_SOURCE_DIR}/include ${json_SOURCE_DIR}/include)
+add_executable(minihttp_post_example post_example.cpp)
+target_link_libraries(minihttp_post_example PRIVATE minihttp json)
+target_include_directories(minihttp_post_example PRIVATE ${PROJECT_SOURCE_DIR}/include ${json_SOURCE_DIR}/include)
