--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,36 +13,50 @@ cmake_minimum_required(VERSION 3.1)
 # Set the project name.
 project(minihttp CXX)
 
-# We need this in order to import external projects.
-include(FetchContent)
-
 # Extend the CMake module path.
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/")
 
 # -----------------------------------------------------------------------------
 # Add options.
 # -----------------------------------------------------------------------------
-option(STRICT_WARNINGS "Enable strict compiler warnings" ON)
-option(WARNINGS_AS_ERRORS "Treat all warnings as errors" OFF)
-option(BUILD_EXAMPLES "Build examples" OFF)
+option(MINIHTTP_STRICT_WARNINGS "Enable strict compiler warnings" ON)
+option(MINIHTTP_WARNINGS_AS_ERRORS "Treat all warnings as errors" OFF)
+option(MINIHTTP_BUILD_EXAMPLES "Build examples" OFF)
+
+# -----------------------------------------------------------------------------
+# ENABLE FETCH CONTENT
+# -----------------------------------------------------------------------------
+
+# We need this in order to import external projects.
+include(FetchContent)
+
+# Hide fetchcontent variables.
+mark_as_advanced(FORCE
+    FETCHCONTENT_QUIET FETCHCONTENT_BASE_DIR FETCHCONTENT_FULLY_DISCONNECTED FETCHCONTENT_UPDATES_DISCONNECTED
+)
 
 # -----------------------------------------------------------------------------
 # DEPENDENCIES
 # -----------------------------------------------------------------------------
+
+# We need mbedtls.
 find_package(mbedtls REQUIRED)
+
+# We want doxygen for the documentation.
+find_package(Doxygen)
 
 # -----------------------------------------------------------------------------
 # LIBRARY
 # -----------------------------------------------------------------------------
 # Add the C++ library.
-add_library(minihttp INTERFACE)
-add_library(minihttp::minihttp ALIAS minihttp)
+add_library(${PROJECT_NAME} INTERFACE)
+add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 # Inlcude header directories.
-target_include_directories(minihttp INTERFACE ${PROJECT_SOURCE_DIR}/include ${MBEDTLS_INCLUDE_DIRS})
+target_include_directories(${PROJECT_NAME} INTERFACE ${PROJECT_SOURCE_DIR}/include ${MBEDTLS_INCLUDE_DIRS})
 # Link libraries.
-target_link_libraries(minihttp INTERFACE mbedtls mbedx509 mbedcrypto)
+target_link_libraries(${PROJECT_NAME} INTERFACE mbedtls mbedx509 mbedcrypto)
 if(WIN32)
-    target_link_libraries(minihttp INTERFACE ws2_32)
+    target_link_libraries(${PROJECT_NAME} INTERFACE ws2_32)
 endif()
 
 # -----------------------------------------------------------------------------
@@ -50,49 +64,60 @@ endif()
 # -----------------------------------------------------------------------------
 if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     # Disable warnings that suggest using MSVC-specific safe functions
-    target_compile_definitions(minihttp INTERFACE _CRT_SECURE_NO_WARNINGS)
-    if(WARNINGS_AS_ERRORS)
-        target_compile_options(minihttp INTERFACE /WX)
+    target_compile_definitions(${PROJECT_NAME} INTERFACE _CRT_SECURE_NO_WARNINGS)
+    if(MINIHTTP_WARNINGS_AS_ERRORS)
+        target_compile_options(${PROJECT_NAME} INTERFACE /WX)
     endif()
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-    if(WARNINGS_AS_ERRORS)
-        target_compile_options(minihttp INTERFACE -Werror)
+    if(MINIHTTP_WARNINGS_AS_ERRORS)
+        target_compile_options(${PROJECT_NAME} INTERFACE -Werror)
     endif()
 endif()
 
-if(STRICT_WARNINGS)
+if(MINIHTTP_STRICT_WARNINGS)
     if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
         # Mark system headers as external for MSVC explicitly
         # https://devblogs.microsoft.com/cppblog/broken-warnings-theory
-        target_compile_options(minihttp INTERFACE /experimental:external)
-        target_compile_options(minihttp INTERFACE /external:I ${CMAKE_BINARY_DIR})
-        target_compile_options(minihttp INTERFACE /external:anglebrackets)
-        target_compile_options(minihttp INTERFACE /external:W0)
+        target_compile_options(${PROJECT_NAME} INTERFACE /experimental:external)
+        target_compile_options(${PROJECT_NAME} INTERFACE /external:I ${CMAKE_BINARY_DIR})
+        target_compile_options(${PROJECT_NAME} INTERFACE /external:anglebrackets)
+        target_compile_options(${PROJECT_NAME} INTERFACE /external:W0)
 
-        target_compile_options(minihttp INTERFACE /W4)
+        target_compile_options(${PROJECT_NAME} INTERFACE /W4)
     elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-        target_compile_options(minihttp INTERFACE -Wall -Wextra -Wconversion -pedantic)
+        target_compile_options(${PROJECT_NAME} INTERFACE -Wall -Wextra -Wconversion -pedantic)
     endif()
 endif()
 
 # -----------------------------------------------------------------------------
 # DOCUMENTATION
 # -----------------------------------------------------------------------------
-find_package(Doxygen)
 if(DOXYGEN_FOUND)
-    message(STATUS "Retrieving `doxygen-awesome-css`...")
+
+    # Record the options that describe how to populate the specified content.
     FetchContent_Declare(
         doxygenawesome
         GIT_REPOSITORY https://github.com/jothepro/doxygen-awesome-css
         GIT_TAG 4cd62308d825fe0396d2f66ffbab45d0e247724c # 2.0.3
     )
+    # Retrieve the properties related to the content.
     FetchContent_GetProperties(doxygenawesome)
+    # If not populated, make the content available.
     if(NOT doxygenawesome_POPULATED)
+        message(STATUS "Retrieving `doxygen-awesome-css`...")
+        # Ensures the named dependencies have been populated.
         FetchContent_MakeAvailable(doxygenawesome)
+        # Hide fetchcontent variables, otherwise with ccmake it's a mess.
+        mark_as_advanced(FORCE
+            FETCHCONTENT_UPDATES_DISCONNECTED_DOXYGENAWESOME
+            FETCHCONTENT_SOURCE_DIR_DOXYGENAWESOME
+        )
     endif()
 
-    set(DOXYGEN_WARN_FORMAT "$file($line): $text")
+    # = CUSTOMIZATION =========================================================
+    set(DOXYGEN_PROJECT_NAME "JSON Parser/Writer Library")
     set(DOXYGEN_USE_MDFILE_AS_MAINPAGE README.md)
+    set(DOXYGEN_SHOW_INCLUDE_FILES NO)
     set(DOXYGEN_GENERATE_TREEVIEW YES)
     set(DOXYGEN_HTML_HEADER ${doxygenawesome_SOURCE_DIR}/doxygen-custom/header.html)
     set(DOXYGEN_HTML_EXTRA_STYLESHEET ${doxygenawesome_SOURCE_DIR}/doxygen-awesome.css)
@@ -101,15 +126,16 @@ if(DOXYGEN_FOUND)
         ${doxygenawesome_SOURCE_DIR}/doxygen-awesome-paragraph-link.js
         ${doxygenawesome_SOURCE_DIR}/doxygen-awesome-darkmode-toggle.js
     )
-    doxygen_add_docs(minihttp_documentation
-        include/minihttp.hpp
-        README.md
+    doxygen_add_docs(
+        ${PROJECT_NAME}_documentation
+        ${PROJECT_SOURCE_DIR}/README.md
+        ${PROJECT_SOURCE_DIR}/include/minihttp/minihttp.hpp
     )
 endif()
 
 # -----------------------------------------------------------------------------
 # Examples
 # -----------------------------------------------------------------------------
-if(BUILD_EXAMPLES)
+if(MINIHTTP_BUILD_EXAMPLES)
     add_subdirectory(example)
 endif()
